--- a/style.css
+++ b/style.css
@@ -5,11 +5,16 @@
 
 }
 
+.page-container {
+	width: 960px;
+	margin: 0 auto;
+}
+
 body {
 	font-family: "Helvetica";
 	color: #777;
 	background: #777;
-	width: 960px;
+	
 
 	
 }
@@ -53,8 +58,6 @@ article {
 	margin: 5px;
 	padding: 10px;
 	text-align: center;
-
-
 	
 }
 
